# mkdocstrings-sourcelink

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  dev-requirements.txt  enviroment.yml  index.html  setup.cfg  setup.py  sitemap.xml  sonar-project.properties
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---feature-request.md
.github/workflows/: build.yml  cd.yml  ci.yml  codeql.yml  release-drafter.yml
api/: index.html
assets/ai2business-extras/: extra-5ee9fa49a5.css.map  extra-uml-792ac706.js  material-extra-theme-7c147bb7.js  material-extra-theme-7c147bb7.js.map
auto_generator/: index.html
contributing/: index.html
docs/: Pipfile  doc-requirements.txt  generate_docs.py  mkdocs.yml
docs/theme/: main.html
docs/theme/assets/ai2business-extras/: extra-5ee9fa49a5.css  extra-uml-792ac706.js.map
docs/theme/partials/: libs.html
docs/tmp/: example.md
example/: index.html
license/: index.html
mkdocstrings_sourcelink/: __init__.py  auto_generator.py  toolbox.py
mkdocstrings_sourcelink/test/: __init__.py  test_mkdocstrings_sourcelink.py
search/: search_index.json
toolbox/: index.html
