[metadata]
name = mkdocstrings_sourcelink
version = 0.3.0
description = Automatic source link generation for mkdocstrings.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[pylint]
max-line-length = 88
disable = all
enable = missing-docstring
ignore = test

[pylint.messages_control]
disable = all
enable = missing-docstring

[pydocstyle]
convention = google
match = (?!test_).*\.py
match-dir = mkdocstrings_sourcelink/

[pycodestyle]
ax-line-length = 88
